# gada

./: Activity_Course 2 TikTok project lab.ipynb  Activity_Course 3 TikTok project lab.ipynb  Activity_Course 4 TikTok project lab.ipynb  Activity_Course 5 TikTok project lab.ipynb  Activity_Course 6 TikTok project lab.ipynb  README.md  pyproject.toml
