[tool.poetry]
name = "google-adv-data"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "google_adv_data"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
scikit-learn = "^1.3.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
xgboost = "^1.7.6"
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
